SERVER-46371 Don't assume epoch change implies drop/create in logging, error messages, and comments