src/mongo/db/s/metadata_manager.h
@@ -258,7 +258,7 @@ private:
     // Mutex to protect the state below
     mutable Mutex _managerLock = MONGO_MAKE_LATCH("MetadataManager::_managerLock");
 
-    // Contains a list of collection metadata for the same collection epoch, ordered in
+    // Contains a list of collection metadata for the same collection uuid, ordered in
     // chronological order based on the refreshes that occurred. The entry at _metadata.back() is
     // the most recent metadata and is what is returned to new queries. The rest are previously
     // active collection metadata instances still in use by active server operations or cursors.
